tests/ui/parse_literal_spec.stderr
error: proc-macro derive panicked
  --> $DIR/parse_literal_spec.rs:13:10
   |
13 | #[derive(Clap, Debug)]
   |          ^^^^
   |
   = help: message: unknown value parser specification, problematic tokens: ( parse ( "from_str" ) )
